--- a/Intro to APIs EMPTY.ipynb
+++ b/Intro to APIs EMPTY.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "4db9d154",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "id": "5a9081e3",
    "metadata": {},
    "outputs": [
@@ -286,6 +286,8 @@
       "{'Name': 'Bisharp', 'Ability': 'Defiant', 'Base-Exp': 172, 'Sprite': 'https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/625.png', 'Attack-Base-Stat': 125, 'HP-Base Stat': 65, 'Defense-Base-Stat': 100} \n",
       "\n",
       "{'Name': 'Alakazam', 'Ability': 'Synchronize', 'Base-Exp': 250, 'Sprite': 'https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/65.png', 'Attack-Base-Stat': 50, 'HP-Base Stat': 55, 'Defense-Base-Stat': 45} \n",
+      "\n",
+      "{'Name': 'Togekiss', 'Ability': 'Hustle', 'Base-Exp': 273, 'Sprite': 'https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/468.png', 'Attack-Base-Stat': 50, 'HP-Base Stat': 85, 'Defense-Base-Stat': 95} \n",
       "\n"
      ]
     }
@@ -307,7 +309,7 @@
     "                }\n",
     "            print(team_data, '\\n')\n",
     "            \n",
-    "pokemon_func(['lucario', 'gyarados', 'excadrill', 'bisharp', 'alakazam'])"
+    "pokemon_func(['lucario', 'gyarados', 'excadrill', 'bisharp', 'alakazam', 'togekiss'])"
    ]
   },
   {
